# sentrix

./: .gitignore  README.md  pyproject.toml  requirements.txt
patterns/: secrets.yaml
src/sentrix/: cli.py  config.py  scanner.py  watcher.py
tests/: test_cli.py  test_patterns.py  test_scanner.py
